--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -110,7 +110,7 @@
           {% endfor %}
 
           <!-- Add the CV link -->
-          <li class="nav-item {% if page.title == 'CV' %}active{% endif %}">
+          <li class="nav-item {% if page.title == 'cv' %}active{% endif %}">
             <a class="nav-link" href="{{ '/assets/pdf/CV.pdf' | relative_url }}" target="_blank">CV</a>
           </li>
 
